--- a/Code/qtiplot/MantidQt/MantidWidgets/inc/ICatSearch.ui
+++ b/Code/qtiplot/MantidQt/MantidWidgets/inc/ICatSearch.ui
@@ -5,8 +5,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>713</width>
-    <height>591</height>
+    <width>641</width>
+    <height>560</height>
    </rect>
   </property>
   <property name="windowTitle" >
@@ -15,14 +15,17 @@
   <widget class="QTableWidget" name="searchtableWidget" >
    <property name="geometry" >
     <rect>
-     <x>240</x>
-     <y>30</y>
-     <width>461</width>
-     <height>521</height>
+     <x>10</x>
+     <y>150</y>
+     <width>621</width>
+     <height>371</height>
     </rect>
    </property>
    <property name="toolTip" >
     <string>ICat Search Results Window</string>
+   </property>
+   <property name="styleSheet" >
+    <string notr="true" >alternate-background-color: rgb(216, 225, 255);</string>
    </property>
    <property name="alternatingRowColors" >
     <bool>true</bool>
@@ -74,137 +77,12 @@
     </property>
    </column>
   </widget>
-  <widget class="QTreeWidget" name="searchtreeWidget" >
-   <property name="geometry" >
-    <rect>
-     <x>10</x>
-     <y>30</y>
-     <width>231</width>
-     <height>521</height>
-    </rect>
-   </property>
-   <property name="toolTip" >
-    <string>ICat Search Widget</string>
-   </property>
-   <property name="statusTip" >
-    <string/>
-   </property>
-   <column>
-    <property name="text" >
-     <string>Search Widget</string>
-    </property>
-   </column>
-  </widget>
-  <widget class="QGroupBox" name="searchgroupBox" >
-   <property name="geometry" >
-    <rect>
-     <x>20</x>
-     <y>130</y>
-     <width>211</width>
-     <height>109</height>
-    </rect>
-   </property>
-   <property name="title" >
-    <string>SearchBox</string>
-   </property>
-   <widget class="QLabel" name="runNumberLabel" >
-    <property name="geometry" >
-     <rect>
-      <x>10</x>
-      <y>22</y>
-      <width>31</width>
-      <height>20</height>
-     </rect>
-    </property>
-    <property name="text" >
-     <string>Run#:</string>
-    </property>
-   </widget>
-   <widget class="QLineEdit" name="startRunEdit" >
-    <property name="geometry" >
-     <rect>
-      <x>47</x>
-      <y>21</y>
-      <width>63</width>
-      <height>20</height>
-     </rect>
-    </property>
-    <property name="toolTip" >
-     <string>Start Run Number</string>
-    </property>
-   </widget>
-   <widget class="QLineEdit" name="endRunEdit" >
-    <property name="geometry" >
-     <rect>
-      <x>133</x>
-      <y>20</y>
-      <width>63</width>
-      <height>20</height>
-     </rect>
-    </property>
-    <property name="toolTip" >
-     <string>End Run Number</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="instrumentLabel" >
-    <property name="geometry" >
-     <rect>
-      <x>10</x>
-      <y>50</y>
-      <width>116</width>
-      <height>20</height>
-     </rect>
-    </property>
-    <property name="text" >
-     <string>Instrument:</string>
-    </property>
-   </widget>
-   <widget class="QComboBox" name="instrmentBox" >
-    <property name="geometry" >
-     <rect>
-      <x>134</x>
-      <y>50</y>
-      <width>63</width>
-      <height>20</height>
-     </rect>
-    </property>
-    <property name="toolTip" >
-     <string>Instrument Box</string>
-    </property>
-   </widget>
-   <widget class="QCheckBox" name="casesensitiveBox" >
-    <property name="geometry" >
-     <rect>
-      <x>10</x>
-      <y>78</y>
-      <width>116</width>
-      <height>18</height>
-     </rect>
-    </property>
-    <property name="text" >
-     <string>Case Sensitive</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="searchButton" >
-    <property name="geometry" >
-     <rect>
-      <x>134</x>
-      <y>77</y>
-      <width>63</width>
-      <height>23</height>
-     </rect>
-    </property>
-    <property name="text" >
-     <string>Search</string>
-    </property>
-   </widget>
-  </widget>
   <widget class="QLabel" name="searchlabel" >
    <property name="geometry" >
     <rect>
-     <x>9</x>
-     <y>9</y>
-     <width>693</width>
+     <x>10</x>
+     <y>10</y>
+     <width>622</width>
      <height>20</height>
     </rect>
    </property>
@@ -218,46 +96,249 @@
     <string/>
    </property>
   </widget>
-  <widget class="QWidget" name="layoutWidget" >
+  <widget class="QTreeWidget" name="searchtreeWidget" >
    <property name="geometry" >
     <rect>
-     <x>543</x>
-     <y>560</y>
-     <width>158</width>
-     <height>25</height>
+     <x>10</x>
+     <y>30</y>
+     <width>621</width>
+     <height>121</height>
     </rect>
    </property>
-   <layout class="QHBoxLayout" name="horizontalLayout" >
-    <item>
-     <widget class="QPushButton" name="okButton" >
-      <property name="text" >
-       <string>OK</string>
-      </property>
-     </widget>
-    </item>
-    <item>
-     <widget class="QPushButton" name="cancelButton" >
-      <property name="text" >
-       <string>Cancel</string>
-      </property>
-     </widget>
-    </item>
-   </layout>
-   <zorder>cancelButton</zorder>
-   <zorder>okButton</zorder>
+   <property name="toolTip" >
+    <string>ICat Search Box</string>
+   </property>
+   <property name="statusTip" >
+    <string/>
+   </property>
+   <column>
+    <property name="text" >
+     <string>Search Box</string>
+    </property>
+   </column>
+  </widget>
+  <widget class="QLabel" name="enddateLabel" >
+   <property name="geometry" >
+    <rect>
+     <x>230</x>
+     <y>93</y>
+     <width>61</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text" >
+    <string>End Date:</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="endRunEdit" >
+   <property name="geometry" >
+    <rect>
+     <x>140</x>
+     <y>60</y>
+     <width>70</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="toolTip" >
+    <string>End Run Number</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="startdateLineEdit" >
+   <property name="geometry" >
+    <rect>
+     <x>300</x>
+     <y>60</y>
+     <width>70</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text" >
+    <string>DD/MM/YYYY</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="startRunEdit" >
+   <property name="geometry" >
+    <rect>
+     <x>59</x>
+     <y>60</y>
+     <width>70</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="toolTip" >
+    <string>Start Run Number</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="startdateLabel" >
+   <property name="geometry" >
+    <rect>
+     <x>230</x>
+     <y>63</y>
+     <width>61</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text" >
+    <string>Start Date:</string>
+   </property>
+  </widget>
+  <widget class="QCheckBox" name="casesensitiveBox" >
+   <property name="geometry" >
+    <rect>
+     <x>490</x>
+     <y>90</y>
+     <width>111</width>
+     <height>18</height>
+    </rect>
+   </property>
+   <property name="toolTip" >
+    <string>Case Sensitive keyWord Search</string>
+   </property>
+   <property name="text" >
+    <string>Case Sensitive</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="runNumberLabel" >
+   <property name="geometry" >
+    <rect>
+     <x>14</x>
+     <y>61</y>
+     <width>31</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text" >
+    <string>Run#:</string>
+   </property>
+  </widget>
+  <widget class="QToolButton" name="startdatetoolButton" >
+   <property name="geometry" >
+    <rect>
+     <x>380</x>
+     <y>60</y>
+     <width>25</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text" >
+    <string>...</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="instrumentLabel" >
+   <property name="geometry" >
+    <rect>
+     <x>14</x>
+     <y>90</y>
+     <width>61</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text" >
+    <string>Instrument:</string>
+   </property>
+  </widget>
+  <widget class="QComboBox" name="instrmentBox" >
+   <property name="geometry" >
+    <rect>
+     <x>140</x>
+     <y>90</y>
+     <width>70</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="toolTip" >
+    <string>Instrument Box</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="keywordsLabel" >
+   <property name="geometry" >
+    <rect>
+     <x>420</x>
+     <y>62</y>
+     <width>71</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text" >
+    <string>KeyWord(s):</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="enddateLineEdit" >
+   <property name="geometry" >
+    <rect>
+     <x>300</x>
+     <y>90</y>
+     <width>70</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text" >
+    <string>DD/MM/YYYY</string>
+   </property>
+  </widget>
+  <widget class="QToolButton" name="enddatetoolButton" >
+   <property name="geometry" >
+    <rect>
+     <x>380</x>
+     <y>90</y>
+     <width>25</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text" >
+    <string>...</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="keywordslineEdit" >
+   <property name="geometry" >
+    <rect>
+     <x>490</x>
+     <y>60</y>
+     <width>131</width>
+     <height>20</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="searchButton" >
+   <property name="geometry" >
+    <rect>
+     <x>550</x>
+     <y>120</y>
+     <width>70</width>
+     <height>23</height>
+    </rect>
+   </property>
+   <property name="text" >
+    <string>Search</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="helpButton" >
+   <property name="geometry" >
+    <rect>
+     <x>10</x>
+     <y>530</y>
+     <width>61</width>
+     <height>23</height>
+    </rect>
+   </property>
+   <property name="text" >
+    <string>Help</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="closeButton" >
+   <property name="geometry" >
+    <rect>
+     <x>572</x>
+     <y>530</y>
+     <width>61</width>
+     <height>23</height>
+    </rect>
+   </property>
+   <property name="text" >
+    <string>Close</string>
+   </property>
   </widget>
  </widget>
- <tabstops>
-  <tabstop>startRunEdit</tabstop>
-  <tabstop>endRunEdit</tabstop>
-  <tabstop>instrmentBox</tabstop>
-  <tabstop>casesensitiveBox</tabstop>
-  <tabstop>searchButton</tabstop>
-  <tabstop>okButton</tabstop>
-  <tabstop>cancelButton</tabstop>
-  <tabstop>searchtreeWidget</tabstop>
-  <tabstop>searchtableWidget</tabstop>
- </tabstops>
  <resources/>
  <connections/>
 </ui>
