--- a/Code/qtiplot/MantidQt/MantidWidgets/inc/ICatInvestigation.ui
+++ b/Code/qtiplot/MantidQt/MantidWidgets/inc/ICatInvestigation.ui
@@ -5,18 +5,18 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>698</width>
-    <height>501</height>
+    <width>700</width>
+    <height>517</height>
    </rect>
   </property>
   <property name="windowTitle" >
    <string>Investigation Data</string>
   </property>
   <layout class="QGridLayout" name="gridLayout" >
-   <item row="0" column="0" colspan="5" >
+   <item row="0" column="0" colspan="2" >
     <widget class="QLabel" name="invstlabel" >
      <property name="frameShape" >
-      <enum>QFrame::Box</enum>
+      <enum>QFrame::StyledPanel</enum>
      </property>
      <property name="frameShadow" >
       <enum>QFrame::Sunken</enum>
@@ -26,8 +26,14 @@
      </property>
     </widget>
    </item>
-   <item row="1" column="0" colspan="3" >
+   <item row="1" column="0" >
     <widget class="QTreeWidget" name="invsttreeWidget" >
+     <property name="maximumSize" >
+      <size>
+       <width>181</width>
+       <height>16777215</height>
+      </size>
+     </property>
      <property name="horizontalScrollBarPolicy" >
       <enum>Qt::ScrollBarAsNeeded</enum>
      </property>
@@ -39,12 +45,12 @@
      </property>
      <column>
       <property name="text" >
-       <string>Data</string>
+       <string/>
       </property>
      </column>
     </widget>
    </item>
-   <item row="1" column="3" colspan="2" >
+   <item row="1" column="1" >
     <widget class="QTableWidget" name="invsttableWidget" >
      <property name="font" >
       <font>
@@ -64,8 +70,14 @@
      <property name="selectionBehavior" >
       <enum>QAbstractItemView::SelectRows</enum>
      </property>
+     <property name="textElideMode" >
+      <enum>Qt::ElideLeft</enum>
+     </property>
      <property name="sortingEnabled" >
       <bool>false</bool>
+     </property>
+     <property name="wordWrap" >
+      <bool>true</bool>
      </property>
      <property name="cornerButtonEnabled" >
       <bool>true</bool>
@@ -107,31 +119,53 @@
      </column>
     </widget>
    </item>
-   <item row="2" column="0" >
-    <widget class="QPushButton" name="pushButton" >
-     <property name="text" >
-      <string>Help</string>
-     </property>
-    </widget>
-   </item>
-   <item row="2" column="1" >
-    <widget class="QCheckBox" name="loadcheckBox" >
-     <property name="text" >
-      <string>Controlled loading </string>
-     </property>
-    </widget>
-   </item>
-   <item row="2" column="2" colspan="2" >
-    <widget class="QCheckBox" name="dataFilescheckBox" >
-     <property name="text" >
-      <string> DataFiles</string>
-     </property>
-    </widget>
-   </item>
-   <item row="2" column="4" >
+   <item row="2" column="0" colspan="2" >
     <layout class="QHBoxLayout" name="horizontalLayout" >
      <item>
+      <widget class="QPushButton" name="pushButton" >
+       <property name="text" >
+        <string>Help</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QCheckBox" name="loadcheckBox" >
+       <property name="toolTip" >
+        <string>Popsup Load Raw/Nexus Dialog </string>
+       </property>
+       <property name="text" >
+        <string>Controlled loading </string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QCheckBox" name="dataFilescheckBox" >
+       <property name="toolTip" >
+        <string>Load only  Raw and Nexus files</string>
+       </property>
+       <property name="text" >
+        <string> DataFiles</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <spacer name="horizontalSpacer" >
+       <property name="orientation" >
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeHint" stdset="0" >
+        <size>
+         <width>68</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item>
       <widget class="QPushButton" name="selectallButton" >
+       <property name="toolTip" >
+        <string>Select All files from the  list</string>
+       </property>
        <property name="text" >
         <string>Select All Files</string>
        </property>
@@ -139,6 +173,9 @@
      </item>
      <item>
       <widget class="QPushButton" name="downloadButton" >
+       <property name="toolTip" >
+        <string>Download  selected files</string>
+       </property>
        <property name="text" >
         <string>Download</string>
        </property>
@@ -146,22 +183,21 @@
      </item>
      <item>
       <widget class="QPushButton" name="LoadButton" >
+       <property name="toolTip" >
+        <string>Load  selected files</string>
+       </property>
        <property name="text" >
         <string>Load</string>
        </property>
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="okButton" >
-       <property name="text" >
-        <string>Ok</string>
-       </property>
-      </widget>
-     </item>
-     <item>
       <widget class="QPushButton" name="cancelButton" >
+       <property name="toolTip" >
+        <string>Close Investigation data widget</string>
+       </property>
        <property name="text" >
-        <string>Cancel</string>
+        <string>Close</string>
        </property>
       </widget>
      </item>
