--- a/Code/qtiplot/MantidQt/MantidWidgets/inc/ICatSearch.ui
+++ b/Code/qtiplot/MantidQt/MantidWidgets/inc/ICatSearch.ui
@@ -5,136 +5,171 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>641</width>
-    <height>560</height>
+    <width>781</width>
+    <height>570</height>
    </rect>
   </property>
   <property name="windowTitle" >
    <string>ICatSearch</string>
   </property>
-  <widget class="QTableWidget" name="searchtableWidget" >
-   <property name="geometry" >
-    <rect>
-     <x>10</x>
-     <y>150</y>
-     <width>621</width>
-     <height>371</height>
-    </rect>
-   </property>
-   <property name="toolTip" >
-    <string>ICat Search Results Window</string>
-   </property>
-   <property name="styleSheet" >
-    <string notr="true" >alternate-background-color: rgb(216, 225, 255);</string>
-   </property>
-   <property name="alternatingRowColors" >
-    <bool>true</bool>
-   </property>
-   <property name="selectionMode" >
-    <enum>QAbstractItemView::SingleSelection</enum>
-   </property>
-   <property name="showGrid" >
-    <bool>true</bool>
-   </property>
-   <column>
-    <property name="text" >
-     <string>InvestigationId</string>
-    </property>
-   </column>
-   <column>
-    <property name="text" >
-     <string>RbNumber</string>
-    </property>
-   </column>
-   <column>
-    <property name="text" >
-     <string>Title</string>
-    </property>
-   </column>
-   <column>
-    <property name="text" >
-     <string>Type</string>
-    </property>
-   </column>
-   <column>
-    <property name="text" >
-     <string>Instrument</string>
-    </property>
-   </column>
-   <column>
-    <property name="text" >
-     <string>Investigator</string>
-    </property>
-   </column>
-   <column>
-    <property name="text" >
-     <string>RunRange</string>
-    </property>
-   </column>
-   <column>
-    <property name="text" >
-     <string>Year</string>
-    </property>
-   </column>
-  </widget>
-  <widget class="QLabel" name="searchlabel" >
-   <property name="geometry" >
-    <rect>
-     <x>10</x>
-     <y>10</y>
-     <width>622</width>
-     <height>20</height>
-    </rect>
-   </property>
-   <property name="frameShape" >
-    <enum>QFrame::Box</enum>
-   </property>
-   <property name="frameShadow" >
-    <enum>QFrame::Sunken</enum>
-   </property>
-   <property name="text" >
-    <string/>
-   </property>
-  </widget>
-  <widget class="QTreeWidget" name="searchtreeWidget" >
-   <property name="geometry" >
-    <rect>
-     <x>10</x>
-     <y>30</y>
-     <width>621</width>
-     <height>121</height>
-    </rect>
-   </property>
-   <property name="toolTip" >
-    <string>ICat Search Box</string>
-   </property>
-   <property name="statusTip" >
-    <string/>
-   </property>
-   <column>
-    <property name="text" >
-     <string>Search Box</string>
-    </property>
-   </column>
-  </widget>
-  <widget class="QLabel" name="enddateLabel" >
-   <property name="geometry" >
-    <rect>
-     <x>230</x>
-     <y>93</y>
-     <width>61</width>
-     <height>16</height>
-    </rect>
-   </property>
-   <property name="text" >
-    <string>End Date:</string>
-   </property>
-  </widget>
+  <layout class="QGridLayout" name="gridLayout" >
+   <item row="3" column="0" >
+    <layout class="QHBoxLayout" name="horizontalLayout" >
+     <item>
+      <widget class="QPushButton" name="helpButton" >
+       <property name="text" >
+        <string>Help</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <spacer name="horizontalSpacer_4" >
+       <property name="orientation" >
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeHint" stdset="0" >
+        <size>
+         <width>527</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item>
+      <widget class="QPushButton" name="closeButton" >
+       <property name="text" >
+        <string>Close</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </item>
+   <item row="1" column="0" >
+    <widget class="QTreeWidget" name="searchtreeWidget" >
+     <property name="maximumSize" >
+      <size>
+       <width>16777215</width>
+       <height>131</height>
+      </size>
+     </property>
+     <property name="toolTip" >
+      <string>ICat Search Box</string>
+     </property>
+     <property name="statusTip" >
+      <string/>
+     </property>
+     <property name="styleSheet" >
+      <string notr="true" >background-color: rgb(216, 225, 255);</string>
+     </property>
+     <column>
+      <property name="text" >
+       <string>                                                                                                                    Search Box</string>
+      </property>
+     </column>
+    </widget>
+   </item>
+   <item row="0" column="0" >
+    <widget class="QLabel" name="searchlabel" >
+     <property name="frameShape" >
+      <enum>QFrame::StyledPanel</enum>
+     </property>
+     <property name="frameShadow" >
+      <enum>QFrame::Sunken</enum>
+     </property>
+     <property name="text" >
+      <string/>
+     </property>
+    </widget>
+   </item>
+   <item row="2" column="0" >
+    <widget class="QTableWidget" name="searchtableWidget" >
+     <property name="toolTip" >
+      <string/>
+     </property>
+     <property name="styleSheet" >
+      <string notr="true" >background-color: rgb(216, 225, 255);</string>
+     </property>
+     <property name="horizontalScrollBarPolicy" >
+      <enum>Qt::ScrollBarAsNeeded</enum>
+     </property>
+     <property name="autoScroll" >
+      <bool>true</bool>
+     </property>
+     <property name="alternatingRowColors" >
+      <bool>true</bool>
+     </property>
+     <property name="selectionMode" >
+      <enum>QAbstractItemView::SingleSelection</enum>
+     </property>
+     <property name="selectionBehavior" >
+      <enum>QAbstractItemView::SelectRows</enum>
+     </property>
+     <property name="showGrid" >
+      <bool>true</bool>
+     </property>
+     <column>
+      <property name="text" >
+       <string>InvestigationId</string>
+      </property>
+     </column>
+     <column>
+      <property name="text" >
+       <string>RbNumber</string>
+      </property>
+     </column>
+     <column>
+      <property name="text" >
+       <string>Title</string>
+      </property>
+     </column>
+     <column>
+      <property name="text" >
+       <string>Type</string>
+      </property>
+     </column>
+     <column>
+      <property name="text" >
+       <string>Instrument</string>
+      </property>
+     </column>
+     <column>
+      <property name="text" >
+       <string>Investigator</string>
+      </property>
+     </column>
+     <column>
+      <property name="text" >
+       <string>RunRange</string>
+      </property>
+     </column>
+     <column>
+      <property name="text" >
+       <string>Year</string>
+      </property>
+     </column>
+     <column>
+      <property name="text" >
+       <string>Abstract</string>
+      </property>
+     </column>
+     <column>
+      <property name="text" >
+       <string>Investigators Name</string>
+      </property>
+     </column>
+     <column>
+      <property name="text" >
+       <string>Samples Name</string>
+      </property>
+     </column>
+    </widget>
+   </item>
+  </layout>
   <widget class="QLineEdit" name="endRunEdit" >
    <property name="geometry" >
     <rect>
      <x>140</x>
-     <y>60</y>
+     <y>68</y>
      <width>70</width>
      <height>20</height>
     </rect>
@@ -143,24 +178,11 @@
     <string>End Run Number</string>
    </property>
   </widget>
-  <widget class="QLineEdit" name="startdateLineEdit" >
-   <property name="geometry" >
-    <rect>
-     <x>300</x>
-     <y>60</y>
-     <width>70</width>
-     <height>20</height>
-    </rect>
-   </property>
-   <property name="text" >
-    <string>DD/MM/YYYY</string>
-   </property>
-  </widget>
   <widget class="QLineEdit" name="startRunEdit" >
    <property name="geometry" >
     <rect>
      <x>59</x>
-     <y>60</y>
+     <y>68</y>
      <width>70</width>
      <height>20</height>
     </rect>
@@ -169,25 +191,12 @@
     <string>Start Run Number</string>
    </property>
   </widget>
-  <widget class="QLabel" name="startdateLabel" >
-   <property name="geometry" >
-    <rect>
-     <x>230</x>
-     <y>63</y>
-     <width>61</width>
-     <height>16</height>
-    </rect>
-   </property>
-   <property name="text" >
-    <string>Start Date:</string>
-   </property>
-  </widget>
   <widget class="QCheckBox" name="casesensitiveBox" >
    <property name="geometry" >
     <rect>
-     <x>490</x>
-     <y>90</y>
-     <width>111</width>
+     <x>530</x>
+     <y>104</y>
+     <width>91</width>
      <height>18</height>
     </rect>
    </property>
@@ -202,7 +211,7 @@
    <property name="geometry" >
     <rect>
      <x>14</x>
-     <y>61</y>
+     <y>69</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -211,24 +220,11 @@
     <string>Run#:</string>
    </property>
   </widget>
-  <widget class="QToolButton" name="startdatetoolButton" >
-   <property name="geometry" >
-    <rect>
-     <x>380</x>
-     <y>60</y>
-     <width>25</width>
-     <height>20</height>
-    </rect>
-   </property>
-   <property name="text" >
-    <string>...</string>
-   </property>
-  </widget>
   <widget class="QLabel" name="instrumentLabel" >
    <property name="geometry" >
     <rect>
      <x>14</x>
-     <y>90</y>
+     <y>104</y>
      <width>61</width>
      <height>20</height>
     </rect>
@@ -241,7 +237,7 @@
    <property name="geometry" >
     <rect>
      <x>140</x>
-     <y>90</y>
+     <y>104</y>
      <width>70</width>
      <height>20</height>
     </rect>
@@ -253,8 +249,8 @@
   <widget class="QLabel" name="keywordsLabel" >
    <property name="geometry" >
     <rect>
-     <x>420</x>
-     <y>62</y>
+     <x>450</x>
+     <y>70</y>
      <width>71</width>
      <height>16</height>
     </rect>
@@ -263,12 +259,22 @@
     <string>KeyWord(s):</string>
    </property>
   </widget>
+  <widget class="QLineEdit" name="keywordslineEdit" >
+   <property name="geometry" >
+    <rect>
+     <x>530</x>
+     <y>70</y>
+     <width>141</width>
+     <height>20</height>
+    </rect>
+   </property>
+  </widget>
   <widget class="QLineEdit" name="enddateLineEdit" >
    <property name="geometry" >
     <rect>
-     <x>300</x>
-     <y>90</y>
-     <width>70</width>
+     <x>291</x>
+     <y>105</y>
+     <width>91</width>
      <height>20</height>
     </rect>
    </property>
@@ -276,11 +282,11 @@
     <string>DD/MM/YYYY</string>
    </property>
   </widget>
-  <widget class="QToolButton" name="enddatetoolButton" >
+  <widget class="QToolButton" name="startdatetoolButton" >
    <property name="geometry" >
     <rect>
-     <x>380</x>
-     <y>90</y>
+     <x>400</x>
+     <y>70</y>
      <width>25</width>
      <height>20</height>
     </rect>
@@ -289,55 +295,92 @@
     <string>...</string>
    </property>
   </widget>
-  <widget class="QLineEdit" name="keywordslineEdit" >
+  <widget class="QToolButton" name="enddatetoolButton" >
    <property name="geometry" >
     <rect>
-     <x>490</x>
-     <y>60</y>
-     <width>131</width>
+     <x>400</x>
+     <y>106</y>
+     <width>25</width>
      <height>20</height>
     </rect>
+   </property>
+   <property name="text" >
+    <string>...</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="startdateLineEdit" >
+   <property name="geometry" >
+    <rect>
+     <x>291</x>
+     <y>69</y>
+     <width>91</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text" >
+    <string>DD/MM/YYYY</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="enddateLabel" >
+   <property name="geometry" >
+    <rect>
+     <x>226</x>
+     <y>105</y>
+     <width>48</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text" >
+    <string>End Date:</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="startdateLabel" >
+   <property name="geometry" >
+    <rect>
+     <x>226</x>
+     <y>69</y>
+     <width>54</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text" >
+    <string>Start Date:</string>
    </property>
   </widget>
   <widget class="QPushButton" name="searchButton" >
    <property name="geometry" >
     <rect>
-     <x>550</x>
-     <y>120</y>
+     <x>689</x>
+     <y>121</y>
      <width>70</width>
      <height>23</height>
     </rect>
+   </property>
+   <property name="toolTip" >
+    <string>Search Investigations</string>
    </property>
    <property name="text" >
     <string>Search</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="helpButton" >
-   <property name="geometry" >
-    <rect>
-     <x>10</x>
-     <y>530</y>
-     <width>61</width>
-     <height>23</height>
-    </rect>
-   </property>
-   <property name="text" >
-    <string>Help</string>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="closeButton" >
-   <property name="geometry" >
-    <rect>
-     <x>572</x>
-     <y>530</y>
-     <width>61</width>
-     <height>23</height>
-    </rect>
-   </property>
-   <property name="text" >
-    <string>Close</string>
-   </property>
-  </widget>
+  <zorder>searchtreeWidget</zorder>
+  <zorder>searchlabel</zorder>
+  <zorder>endRunEdit</zorder>
+  <zorder>startRunEdit</zorder>
+  <zorder>casesensitiveBox</zorder>
+  <zorder>runNumberLabel</zorder>
+  <zorder>instrumentLabel</zorder>
+  <zorder>instrmentBox</zorder>
+  <zorder>keywordsLabel</zorder>
+  <zorder>keywordslineEdit</zorder>
+  <zorder>startdateLabel</zorder>
+  <zorder>enddateLabel</zorder>
+  <zorder>searchtableWidget</zorder>
+  <zorder>startdateLineEdit</zorder>
+  <zorder>enddatetoolButton</zorder>
+  <zorder>startdatetoolButton</zorder>
+  <zorder>enddateLineEdit</zorder>
+  <zorder>searchButton</zorder>
  </widget>
  <resources/>
  <connections/>
